WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211667
Fix null-dereference in DocumentTimelinesController::updateAnimationsAndSendEvents
https://bugs.webkit.org/show_bug.cgi?id=211667
Summary
Fix null-dereference in DocumentTimelinesController::updateAnimationsAndSendE...
Darin Adler
Reported
2020-05-09 12:26:49 PDT
Fix null-dereference in DocumentTimelinesController::updateAnimationsAndSendEvents
Attachments
Patch
(2.04 KB, patch)
2020-05-09 12:27 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2020-05-09 12:27:46 PDT
Created
attachment 398931
[details]
Patch
EWS
Comment 2
2020-05-09 13:15:43 PDT
Committed
r261439
: <
https://trac.webkit.org/changeset/261439
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398931
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-09 13:16:21 PDT
<
rdar://problem/63056257
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug