Fix null-dereference in DocumentTimelinesController::updateAnimationsAndSendEvents https://bugs.webkit.org/show_bug.cgi?id=211667

Reviewed by Antoine Quint.

* animation/DocumentTimelinesController.cpp:
(WebCore::DocumentTimelinesController::updateAnimationsAndSendEvents): Add null
check before removing animationsToRemove, which may already have been removed
since any arbitrary change could occur while animations are firing.


Canonical link: https://commits.webkit.org/224585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261439 268f45cc-cd09-0410-ab3c-d52691b4dbfc